2004-11-01  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Directory.cs: New Create and Delete methods. Free the
	FileInfo List returned by gnome_vfs_directory_list_load.
	* gnomevfs/FileInfo.cs: Copy the FileInfoNative struct so the original
	can be properly freed.
	* gnomevfs/Vfs.cs: Move MakeDirectory and RemoveDirectory to Directory.

2004-11-01  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Directory.cs: Bind gnome_vfs_directory_list_load as a static
	FileInfo[] GetEntries (uri) method.
	* gnomevfs/FileInfo.cs: Add internal FileInfoNative constructor to
	create a FileInfo class based on an existing FileInfoNative struct.
	* gnomevfs/Makefile.am:
	* sample/gnomevfs/Makefile.am:
	* sample/gnomevfs/TestDirectory.cs:

2004-10-30  Todd Berman  <tberman@off.net>

	* gtk/ComboBox.custom:
	* gtk/FileChooserDialog.custom:
	* gtk/FileChooserWidget.custom: Fix c&p error with filename.

2004-10-29  Todd Berman  <tberman@off.net>

	* gtk/ComboBox.custom: Add a header.
	* gtk/FileChooserDialog.custom: Add subclassing support, and a header.
	* gtk/FileChooserWidget.custom: Add a header.

2004-10-29  Todd Berman  <tberman@off.net>

	* gtk/FileChooserDialog.custom: Add Filenames property to return
	the data as a string[] instead of a GSList.
	* gtk/FileChooserWidget.custom: Same as above.
	* gtk/Makefile.am: Add FileChooserWidget.custom

2004-10-30  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* sources/gtk-sharp-sources.xml: Invalid XML due to unremoved -->
	closing comment tag.

2004-10-29  Todd Berman  <tberman@off.net>

	* gtk/FileChooserDialog.custom: Allow a null parent.

2004-10-29  Todd Berman  <tberman@off.net>

	* gconf/GConf/gconf-sharp-2.0.pc.in: s/PACKAGE/PACKAGE_VERSION/ to fix 
	-pkg:gtk-sharp

2004-10-29  Todd Berman  <tberman@off.net>

	* gtk-sharp-2.0.pc.in: s/PACKAGE/PACKAGE_VERSION/ to fix -pkg:gtk-sharp

2004-10-26  Dan Winship  <danw@novell.com>

	* gdk/Gdk.metadata: Remap all "out Gdk.Bitmap" params to be