@@ -1,3 +1,13 @@
+2004-11-02  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* gnomevfs/AsyncDirectoryLoadCallback.cs:
+	* gnomevfs/AsyncDirectoryLoadCallbackNative.cs:
+	* gnomevfs/Directory.cs: Implement asynchronous directory loading.
+	* gnomevfs/FileInfo.cs: Clear the FileInfoNative struct in the
+	destructor.
+	* gnomevfs/Makefile.am: Add new callback files.
+	* sample/gnomevfs/TestDirectory.cs: Add async test.
+
 2004-11-01  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* gnomevfs/Directory.cs: New Create and Delete methods. Free the
